--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -408,15 +408,15 @@ btnNext.onclick = () => {
 
   // ====== Áudio do prompt ======
   function playPrompt(q){
+  const ttsText = q.targetWord || q.tts || q.prompt;
+
   if (q.promptAudio){
     const a = new Audio(absPath(q.promptAudio));
-    a.play().catch(()=>{ speak(q.prompt); });
-  } else if (q.targetWord){
-    // se você passar "targetWord" no JSON (ex.: "dog"), o TTS fala a palavra
-    speak(q.targetWord);
+    a.oncanplaythrough = () => a.play().catch(() => speak(ttsText));
+    a.onerror = () => speak(ttsText);
+    a.load();
   } else {
-    // fallback: fala o texto do prompt
-    speak(q.prompt);
+    speak(ttsText);
   }
 }
 
