--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -155,6 +155,10 @@
 .match-col{display:flex;flex-direction:column;gap:12px}
 .option.selected{outline:3px solid #60a5fa}
 .option.matched{border-color:#86efac;opacity:.65;pointer-events:none}
+.blank {
+  display:inline-block; min-width:56px; border-bottom:3px solid #cfe0ff;
+  margin:0 6px -2px; height:1em;
+}
 </style>
 </head>
 <body>
@@ -276,6 +280,13 @@
 
     // Prompt + áudio
     promptEl.textContent = q.prompt || '—';
+// Mostra linha em vez de "___" (sem atrapalhar o TTS)
+if (q.type === 'fillblank' && !/\_\_+/.test(q.prompt || '')) {
+  const line = document.createElement('span');
+  line.className = 'blank';
+  promptEl.appendChild(document.createTextNode(' '));
+  promptEl.appendChild(line);
+}
     btnPlayPrompt.onclick = () => {
       playPrompt(q);
     };
@@ -302,6 +313,8 @@
 
 if (q.type === 'order') {
   renderOrderQuestion(q);
+} else if (q.type === 'match') {
+  renderMatchQuestion(q);
 } else {
   const opts = (q.shuffleOptions===false) ? q.options : shuffle([...q.options]);
   opts.forEach(opt => {
