--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -16,84 +16,178 @@
     --shadow:0 10px 25px rgba(0,0,0,.08);
     --radius:18px;
   }
+
   *{box-sizing:border-box}
+
   body{
-    margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
-    background:var(--bg); color:var(--text);
-    display:flex; min-height:100dvh; align-items:center; justify-content:center; padding:16px;
+    margin:0;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
+    background:var(--bg);
+    color:var(--text);
+    display:flex;
+    min-height:100dvh;
+    align-items:center;
+    justify-content:center;
+    padding:16px;
   }
+
   .app{
-    width:min(980px,100%); background:var(--card); border-radius:var(--radius); box-shadow:var(--shadow);
-    padding:20px; position:relative; overflow:hidden;
+    width:min(980px,100%);
+    background:var(--card);
+    border-radius:var(--radius);
+    box-shadow:var(--shadow);
+    padding:20px;
+    position:relative;
+    overflow:hidden;
   }
+
   .header{
-    display:flex; align-items:center; gap:12px; margin-bottom:14px;
+    display:flex;
+    align-items:center;
+    gap:12px;
+    margin-bottom:14px;
   }
+
   .avatar{
-    width:54px; height:54px; border-radius:50%; background:#e5f0ff; display:grid; place-items:center; font-size:28px;
+    width:54px; height:54px;
+    border-radius:50%;
+    background:#e5f0ff;
+    display:grid;
+    place-items:center;
+    font-size:28px;
     border:2px solid #cfe0ff;
   }
+
   .title-wrap{flex:1}
   .title{font-weight:700; font-size:20px}
   .subtitle{color:var(--muted); font-size:14px}
+
   .progress{
-    height:8px; background:#eef2f7; border-radius:999px; overflow:hidden; margin-top:8px;
+    height:8px;
+    background:#eef2f7;
+    border-radius:999px;
+    overflow:hidden;
+    margin-top:8px;
   }
   .progress > div{
-    height:100%; width:0%; background:linear-gradient(90deg,#60a5fa,#34d399);
+    height:100%;
+    width:0%;
+    background:linear-gradient(90deg,#60a5fa,#34d399);
     transition:width .3s ease;
   }
 
-  .stage{
-    display:grid; gap:16px; grid-template-columns:1fr;
-  }
+  .stage{display:grid; gap:16px; grid-template-columns:1fr}
+
   .question-card{
-    background:#f9fbff; border:1px solid #e5eaf5; border-radius:16px; padding:16px;
+    background:#f9fbff;
+    border:1px solid #e5eaf5;
+    border-radius:16px;
+    padding:16px;
   }
+
   .q-top{
-    display:grid; grid-template-columns: 1.2fr .8fr; gap:16px;
+    display:grid;
+    grid-template-columns: 1.2fr .8fr;
+    gap:16px;
   }
+
   .q-prompt{
-    font-size:22px; font-weight:700; line-height:1.25; display:flex; align-items:center; gap:10px;
+    font-size:22px;
+    font-weight:700;
+    line-height:1.25;
+    display:flex;
+    align-items:center;
+    gap:10px;
   }
+
+  /* === Media grande da pergunta (sem cortes) === */
   .q-media{
-    width:100%; aspect-ratio:16/10; background:#eef4ff; border:1px dashed #cfe0ff; border-radius:14px;
-    display:grid; place-items:center; overflow:hidden;
+    width:100%;
+    aspect-ratio:16/10;
+    background:#eef4ff;
+    border:1px dashed #cfe0ff;
+    border-radius:14px;
+    display:flex;
+    align-items:center;          /* centraliza vertical */
+    justify-content:center;      /* centraliza horizontal */
+    overflow:hidden;
   }
-  .q-media img{width:100%; height:100%; object-fit:cover}
+  .q-media img{
+    max-width:100%;
+    max-height:100%;
+    width:auto;
+    height:auto;
+    object-fit:contain;          /* não corta */
+    padding:8px;                 /* respiro */
+    display:block;
+  }
+
   .q-controls{display:flex; gap:8px; align-items:center; margin-top:8px}
+
   .icon-btn{
-    border:none; background:#e6f0ff; color:#0f3ea8; padding:10px 12px; border-radius:12px; cursor:pointer; font-weight:700;
+    border:none;
+    background:#e6f0ff;
+    color:#0f3ea8;
+    padding:10px 12px;
+    border-radius:12px;
+    cursor:pointer;
+    font-weight:700;
   }
   .icon-btn:active{transform:translateY(1px)}
 
   .options{
-    display:grid; gap:12px; margin-top:4px;
+    display:grid;
+    gap:12px;
+    margin-top:4px;
     grid-template-columns:repeat(2,1fr);
   }
   @media (max-width:720px){
     .q-top{grid-template-columns:1fr}
     .options{grid-template-columns:1fr}
   }
+
   .option{
-    display:flex; align-items:center; gap:12px;
-    background:#ffffff; border:2px solid #e9eef7; border-radius:18px; padding:14px;
-    cursor:pointer; user-select:none; min-height:84px; box-shadow:0 4px 12px rgba(0,0,0,.03);
+    display:flex;
+    align-items:center;
+    gap:12px;
+    background:#ffffff;
+    border:2px solid #e9eef7;
+    border-radius:18px;
+    padding:14px;
+    cursor:pointer;
+    user-select:none;
+    min-height:84px;
+    box-shadow:0 4px 12px rgba(0,0,0,.03);
     transition:transform .06s ease, border-color .15s ease, box-shadow .15s ease;
   }
   .option:hover{transform:translateY(-1px); box-shadow:0 8px 18px rgba(0,0,0,.06)}
   .option:active{transform:translateY(0)}
+
+  /* Miniatura nas opções (sem cortar) */
   .option .thumb{
-    width:68px; height:68px; border-radius:14px; background:#f3f6ff; border:1px solid #e6ecfb; overflow:hidden; display:grid; place-items:center; font-size:30px;
+    width:68px; height:68px;
+    border-radius:14px;
+    background:#f3f6ff;
+    border:1px solid #e6ecfb;
+    overflow:hidden;
+    display:flex;               /* centraliza melhor que grid */
+    align-items:center;
+    justify-content:center;
+    font-size:30px;
     flex:0 0 68px;
   }
-  .option .thumb img{width:100%; height:100%; object-fit:cover}
-  .option .label{
-    font-size:20px; font-weight:800; letter-spacing:.2px;
+  .option .thumb img{
+    width:100%; height:100%;
+    object-fit:contain;         /* não corta mais ícones (ex.: apple) */
+    padding:6px;
+    display:block;
   }
+
+  .option .label{font-size:20px; font-weight:800; letter-spacing:.2px}
   .option .sub{font-size:13px; color:var(--muted)}
   .option.ok{border-color:#86efac; animation:okPulse .4s ease}
   .option.err{border-color:#fecaca; animation:shake .22s ease}
+
   @keyframes okPulse{
     0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}
     100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}
@@ -107,58 +201,96 @@
   }
 
   .footer{
-    margin-top:8px; display:flex; justify-content:space-between; align-items:center; gap:8px;
+    margin-top:8px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    gap:8px;
   }
+
   .pill{
-    background:#eef2ff; color:#3949ab; padding:8px 12px; border-radius:999px; font-size:12px; border:1px solid #d7defc;
+    background:#eef2ff;
+    color:#3949ab;
+    padding:8px 12px;
+    border-radius:999px;
+    font-size:12px;
+    border:1px solid #d7defc;
   }
+
   .next-btn{
-    border:none; background:linear-gradient(90deg, #3b82f6, #22c55e); color:white; font-weight:800;
-    padding:12px 16px; border-radius:14px; cursor:pointer; box-shadow:0 10px 18px rgba(34,197,94,.25);
-    opacity:.3; pointer-events:none; transition:opacity .2s ease, transform .06s ease;
+    border:none;
+    background:linear-gradient(90deg, #3b82f6, #22c55e);
+    color:white;
+    font-weight:800;
+    padding:12px 16px;
+    border-radius:14px;
+    cursor:pointer;
+    box-shadow:0 10px 18px rgba(34,197,94,.25);
+    opacity:.3;
+    pointer-events:none;
+    transition:opacity .2s ease, transform .06s ease;
   }
   .next-btn.ready{opacity:1; pointer-events:auto}
   .next-btn:active{transform:translateY(1px)}
 
   /* Confete simples */
-  .confetti{
-    position:absolute; inset:0; pointer-events:none; overflow:hidden;
-  }
+  .confetti{position:absolute; inset:0; pointer-events:none; overflow:hidden}
   .piece{
-    position:absolute; width:10px; height:10px; background:hsl(var(--h) 80% 60%);
+    position:absolute; width:10px; height:10px;
+    background:hsl(var(--h) 80% 60%);
     top:-12px; border-radius:2px; animation:drop linear forwards;
   }
-  @keyframes drop{
-    to{transform:translateY(120vh) rotate(540deg)}
-  }
+  @keyframes drop{to{transform:translateY(120vh) rotate(540deg)}}
 
   .toast{
     position:fixed; left:50%; bottom:24px; transform:translateX(-50%);
-    background:#111827; color:white; padding:10px 14px; border-radius:12px; font-size:14px; box-shadow:var(--shadow); opacity:.96;
+    background:#111827; color:white; padding:10px 14px;
+    border-radius:12px; font-size:14px; box-shadow:var(--shadow); opacity:.96;
   }
-  .sr-only{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0;}
-.build-wrap{margin-top:8px}
-.build-tray{
-  min-height:56px; background:#eef4ff; border:2px dashed #cfe0ff; border-radius:14px;
-  padding:10px; display:flex; flex-wrap:wrap; gap:8px; align-items:center;
-}
-.word-chip{
-  background:#fff; border:2px solid #dbe5ff; border-radius:12px; padding:8px 12px; font-weight:800;
-  box-shadow:0 2px 6px rgba(0,0,0,.05); user-select:none;
-}
-.build-actions{display:flex; gap:8px; margin-top:8px}
-.build-btn{
-  border:none; background:#e6f0ff; color:#0f3ea8; padding:8px 12px; border-radius:10px; cursor:pointer; font-weight:700;
-}
-.build-btn:active{transform:translateY(1px)}
-.match-grid{display:grid;grid-template-columns:1fr 1fr;gap:14px;margin-top:8px}
-.match-col{display:flex;flex-direction:column;gap:12px}
-.option.selected{outline:3px solid #60a5fa}
-.option.matched{border-color:#86efac;opacity:.65;pointer-events:none}
-.blank {
-  display:inline-block; min-width:56px; border-bottom:3px solid #cfe0ff;
-  margin:0 6px -2px; height:1em;
-}
+
+  .sr-only{
+    position:absolute; width:1px; height:1px; padding:0; margin:-1px;
+    overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0;
+  }
+
+  /* ORDER (tap-to-build) */
+  .build-wrap{margin-top:8px}
+  .build-tray{
+    min-height:56px;
+    background:#eef4ff;
+    border:2px dashed #cfe0ff;
+    border-radius:14px;
+    padding:10px;
+    display:flex; flex-wrap:wrap; gap:8px; align-items:center;
+  }
+  .word-chip{
+    background:#fff;
+    border:2px solid #dbe5ff;
+    border-radius:12px;
+    padding:8px 12px;
+    font-weight:800;
+    box-shadow:0 2px 6px rgba(0,0,0,.05);
+    user-select:none;
+  }
+  .build-actions{display:flex; gap:8px; margin-top:8px}
+  .build-btn{
+    border:none; background:#e6f0ff; color:#0f3ea8;
+    padding:8px 12px; border-radius:10px; cursor:pointer; font-weight:700;
+  }
+  .build-btn:active{transform:translateY(1px)}
+
+  /* MATCH */
+  .match-grid{display:grid; grid-template-columns:1fr 1fr; gap:14px; margin-top:8px}
+  .match-col{display:flex; flex-direction:column; gap:12px}
+  .option.selected{outline:3px solid #60a5fa}
+  .option.matched{border-color:#86efac; opacity:.65; pointer-events:none}
+
+  /* Lacuna visual para fillblank (não lida pelo TTS) */
+  .blank{
+    display:inline-block; min-width:56px; height:1em;
+    border-bottom:3px solid #cfe0ff;
+    margin:0 6px -2px;
+  }
 </style>
 </head>
 <body>
