--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -300,7 +300,7 @@
     <div class="header">
       <div class="avatar" id="avatar" aria-hidden="true">🤖</div>
       <div class="title-wrap">
-        <div class="title">Perguntas & Respostas</div>
+        <div class="title">Questions & Answers</div>
         <div class="subtitle" id="subtitle">Carregando conteúdo…</div>
         <div class="progress"><div id="bar"></div></div>
       </div>
@@ -323,7 +323,7 @@
         <div class="options" id="options"></div>
 
         <div class="footer">
-          <span class="pill" id="statusPill">Questão —/—</span>
+          <span class="pill" id="statusPill">Question —/—</span>
           <button class="next-btn" id="btnNext" disabled>Próxima</button>
         </div>
       </div>
@@ -408,7 +408,7 @@
     // Barra de progresso e status
     const pct = Math.round(((idx)/questions.length)*100);
     bar.style.width = pct + '%';
-    statusPill.textContent = `Questão ${idx+1}/${questions.length}`;
+    statusPill.textContent = `Question ${idx+1}/${questions.length}`;
 
     // Prompt + áudio
     promptEl.textContent = q.prompt || '—';
