--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -314,7 +314,7 @@
             <div class="q-prompt" id="prompt">—</div>
             <div class="q-controls">
               <button class="icon-btn" id="btnPlayPrompt" title="Ouvir pergunta">🔊 Ouvir</button>
-              <button class="icon-btn" id="btnRepeat" title="Repetir em voz alta (opcional)">🎤 Repetir</button>
+              <button class="icon-btn" id="btnRepeat" title="Repetir em voz alta (opcional)">🎤 Repeat</button>
             </div>
           </div>
           <div class="q-media" id="mediaBox" aria-label="Imagem da pergunta"></div>
@@ -509,7 +509,7 @@ btnNext.onclick = () => {
   // Thumb pode tocar áudio da opção, se houver
   if (o.audio) {
     thumb.style.cursor = 'pointer';
-    thumb.title = 'Ouvir';
+    thumb.title = 'Listen';
     thumb.onclick = (e) => {
       e.stopPropagation();
       const a = new Audio(absPath(o.audio));
