--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -313,8 +313,8 @@
           <div>
             <div class="q-prompt" id="prompt">—</div>
             <div class="q-controls">
-              <button class="icon-btn" id="btnPlayPrompt" title="Ouvir pergunta">🔊 Ouvir</button>
-              <button class="icon-btn" id="btnRepeat" title="Repetir em voz alta (opcional)">🎤 Repeat</button>
+              <button class="icon-btn" id="btnPlayPrompt" title="Listen to question">🔊 Ouvir</button>
+              <button class="icon-btn" id="btnRepeat" title="Repeat aloud (optional)">🎤 Repeat</button>
             </div>
           </div>
           <div class="q-media" id="mediaBox" aria-label="Imagem da pergunta"></div>
