--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Q&A Kids – Neuro Aprendizagem</title>
+<title>Q&A Kids – Hannah Neurolearning</title>
 <style>
   :root{
     --bg:#f7f9fc;
