--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -19,17 +19,17 @@
 
   *{box-sizing:border-box}
 
-  body{
-    margin:0;
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
-    background:var(--bg);
-    color:var(--text);
-    display:flex;
-    min-height:100dvh;
-    align-items:center;
-    justify-content:center;
-    padding:16px;
-  }
+ body{
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
+  background: url('../../imagens/fundo.png') center/cover no-repeat, var(--bg);
+  color:var(--text);
+  display:flex;
+  min-height:100dvh;
+  align-items:center;
+  justify-content:center;
+  padding:16px;
+}
 
   .app{
     width:min(980px,100%);
