--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -49,14 +49,17 @@
   }
 
   .avatar{
-    width:54px; height:54px;
-    border-radius:50%;
-    background:#e5f0ff;
-    display:grid;
-    place-items:center;
-    font-size:28px;
-    border:2px solid #cfe0ff;
-  }
+  width:54px; height:54px; border-radius:50%;
+  background:#e5f0ff; border:2px solid #cfe0ff;
+  display:flex; align-items:center; justify-content:center;
+  overflow:hidden;                /* importante para “clipar” a imagem no círculo */
+}
+.avatar img{
+  width:100%; height:100%;
+  object-fit:contain;             /* não corta o robô */
+  border-radius:50%;
+  display:block;
+}
 
   .title-wrap{flex:1}
   .title{font-weight:700; font-size:20px}
