--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -303,7 +303,7 @@
     <div class="header">
       <div class="avatar" id="avatar" aria-hidden="true">🤖</div>
       <div class="title-wrap">
-        <div class="title">Questions & Answers</div>
+        <div class="title">Hanna Questions</div>
         <div class="subtitle" id="subtitle">Carregando conteúdo…</div>
         <div class="progress"><div id="bar"></div></div>
       </div>
@@ -327,7 +327,7 @@
 
         <div class="footer">
           <span class="pill" id="statusPill">Question —/—</span>
-          <button class="next-btn" id="btnNext" disabled>Próxima</button>
+          <button class="next-btn" id="btnNext" disabled>Next</button>
         </div>
       </div>
     </div>
