--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -294,6 +294,13 @@
     border-bottom:3px solid #cfe0ff;
     margin:0 6px -2px;
   }
+.square-outline{
+  width:42px; height:42px;
+  border:6px solid var(--sq, #3b82f6); /* azul por padrão */
+  border-radius:10px;                  /* tire se quiser cantos retos */
+  background:transparent;
+  display:inline-block;
+}
 </style>
 </head>
 <body>
@@ -303,7 +310,7 @@
     <div class="header">
       <div class="avatar" id="avatar" aria-hidden="true">🤖</div>
       <div class="title-wrap">
-        <div class="title">Hanna Questions</div>
+        <div class="title">Hannah Questions</div>
         <div class="subtitle" id="subtitle">Carregando conteúdo…</div>
         <div class="progress"><div id="bar"></div></div>
       </div>
@@ -488,14 +495,23 @@ btnNext.onclick = () => {
 
   const thumb = document.createElement('div');
   thumb.className = 'thumb';
-  if (o.image) {
-    const img = new Image();
-    img.src = absPath(o.image);
-    img.alt = o.label || '';
-    thumb.appendChild(img);
-  } else {
-    thumb.textContent = o.emoji || '🔤';
-  }
+ if (o.image){
+  const img = new Image();
+  img.src = absPath(o.image);
+  img.alt = o.label || '';
+  thumb.appendChild(img);
+} else if (o.emoji){
+  // se a opção tiver emoji no JSON, usa o emoji
+  thumb.textContent = o.emoji;
+} else {
+  // fallback: quadrado sem preenchimento com borda grossa
+  const box = document.createElement('span');
+  box.className = 'square-outline';
+  // cor da borda (opcional): azul = #3b82f6 | roxo = #7c3aed/#8b5cf6
+  box.style.setProperty('--sq', '#7c3aed'); // roxo grosso
+  thumb.textContent = '';
+  thumb.appendChild(box);
+}
 
   const textWrap = document.createElement('div');
   const label = document.createElement('div');
