--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -301,6 +301,44 @@
   background:transparent;
   display:inline-block;
 }
+/* Quadrado padrão (já deve existir; só acrescente/ajuste transições) */
+.square-outline{
+  width:42px; height:42px;
+  border:6px solid var(--sq, #3b82f6);
+  border-radius:10px;              /* tire se quiser cantos retos */
+  background:transparent;
+  display:inline-block;
+  position:relative;
+  transition: border-color .2s ease, background .2s ease, transform .15s ease;
+}
+
+/* Quando a resposta estiver correta (o botão ganha .ok), mostra o tique */
+.option.ok .square-outline{
+  border-color:#16a34a;            /* verde */
+  background:#dcfce7;              /* verdinho suave */
+}
+
+.option.ok .square-outline::after{
+  content:"✔";
+  position:absolute;
+  inset:0;
+  display:flex; align-items:center; justify-content:center;
+  color:#166534;                    /* verde escuro do tique */
+  font-size:22px; font-weight:900;
+  animation:pop-in .18s ease-out;
+}
+
+/* (Opcional) feedback para erro também no quadrado */
+.option.err .square-outline{
+  border-color:#ef4444;
+  background:#fee2e2;
+}
+
+/* Animação do tique */
+@keyframes pop-in{
+  from{ transform:scale(.6); opacity:0 }
+  to{   transform:scale(1);  opacity:1 }
+}
 </style>
 </head>
 <body>
