--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -634,7 +634,7 @@ btnNext.onclick = () => {
   // ====== Fim ======
   function finish(){
     bar.style.width = '100%';
-    promptEl.textContent = '🎉 Parabéns! Você concluiu todas as perguntas!';
+    promptEl.textContent = '🎉 Congratulations! You've completed all the questions!';
     mediaBox.innerHTML = '<div style="font-size:44px">🏅</div>';
     optionsEl.innerHTML = '';
     btnNext.disabled = true;
