--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -395,9 +395,22 @@
 
   // ====== Estado ======
   let questions = [];
-  let idx = 0;
-  let answered = false;
+// --- controle global de fala/áudio ---
+let isReading = false;   // indica se está lendo/tocando um item agora
+let currentAudio = null; // referência do <audio> em reprodução (se houver)
 
+function stopAllAudio(){
+  // cancela qualquer TTS em andamento
+  try { speechSynthesis.cancel(); } catch(e){}
+  // para áudio de arquivo, se estiver tocando
+  if (currentAudio){
+    try { currentAudio.pause(); currentAudio.currentTime = 0; } catch(e){}
+    currentAudio = null;
+  }
+}
+
+  let idx = 0;
+  
   // ====== Elementos ======
   const subtitle = document.getElementById('subtitle');
   const pill = document.getElementById('pill');
@@ -477,11 +490,16 @@ if (q.type === 'fillblank' && !/\_\_+/.test(q.prompt || '')) {
   promptEl.appendChild(line);
 }
     btnPlayPrompt.onclick = () => {
-      playPrompt(q);
-    };
+  if (isReading) return;     // não toca se já estiver lendo algo
+  playPrompt(q);             // usa o mp3 se existir, senão TTS (já tratado em playPrompt)
+};
 
-    // Botão "repetir": usa Web Speech Synthesis (fallback)
-    btnRepeat.onclick = () => speak(q.prompt);
+btnRepeat.onclick = () => {
+  if (isReading) return;     // evita “tilt” com cliques seguidos
+  stopAllAudio();            // para qualquer áudio/voz atual
+  const t = q.targetWord || q.tts || q.prompt || '';
+  speak(t);                  // fala apenas o texto (TTS)
+};
 
     // Mídia principal (imagem da pergunta opcional)
     mediaBox.innerHTML = '';
@@ -572,16 +590,15 @@ btnNext.onclick = () => {
   speakSelectedThenCheck(q, o, btn);
 };
 
-  // Thumb pode tocar áudio da opção, se houver
-  if (o.audio) {
-    thumb.style.cursor = 'pointer';
-    thumb.title = 'Listen';
-    thumb.onclick = (e) => {
-      e.stopPropagation();
-      const a = new Audio(absPath(o.audio));
-      a.play().catch(()=>{});
-    };
-  }
+  // Clique no thumb: falar a opção e contar a tentativa (igual ao botão)
+thumb.style.cursor = 'pointer';
+thumb.title = 'Play & choose';
+thumb.onclick = (e) => {
+  e.preventDefault();
+  e.stopPropagation();
+  sTap.play().catch(()=>{});
+  speakSelectedThenCheck(q, o, btn);
+};
 
   return btn;
 }
@@ -619,13 +636,16 @@ btnNext.onclick = () => {
 
   // ====== Áudio do prompt ======
   function playPrompt(q){
-  const ttsText = q.targetWord || q.tts || q.prompt;
+  stopAllAudio();
+
+  const ttsText = q.targetWord || q.tts || q.prompt || '';
 
   if (q.promptAudio){
     const a = new Audio(absPath(q.promptAudio));
-    a.oncanplaythrough = () => a.play().catch(() => speak(ttsText));
-    a.onerror = () => speak(ttsText);
-    a.load();
+    currentAudio = a;
+    a.onended = () => { currentAudio = null; };
+    a.onerror  = () => { currentAudio = null; speak(ttsText); };
+    a.play().catch(() => { currentAudio = null; speak(ttsText); });
   } else {
     speak(ttsText);
   }
@@ -905,50 +925,56 @@ function renderMatchQuestion(q){
   rightShuf.forEach(item => colR.appendChild(makeRightBtn(item)));
 }
 let isReading = false;
-
 function speakSelectedThenCheck(q, o, btn){
   if (answered || isReading) return;
   isReading = true;
 
-  // desabilita temporariamente todas as opções enquanto fala
+  // desabilita opções e o "Next" durante a leitura
   const allBtns = Array.from(document.querySelectorAll('.option'));
   allBtns.forEach(el => el.disabled = true);
+  btnNext.disabled = true;
+  btnNext.classList.remove('ready');
 
   const finish = () => {
     isReading = false;
-    // reabilita se ainda não acertou (para poder tentar outra)
     if (!answered) allBtns.forEach(el => el.disabled = false);
-    handleAnswer(q, o, btn);
+    handleAnswer(q, o, btn); // feedback só depois de ouvir
   };
 
-  // texto a falar (se não houver áudio próprio)
+  // texto a falar se não houver áudio próprio
   const say = (o.tts || o.label || o.value || '').toString().trim();
+
+  // para qualquer coisa tocando antes de iniciar outra
+  stopAllAudio();
 
   if (o.audio){
     try{
       const a = new Audio(absPath(o.audio));
+      currentAudio = a;
+
       let done = false;
-      const safeFinish = () => { if (!done){ done = true; finish(); } };
+      const safeFinish = () => { if (!done){ done = true; currentAudio = null; finish(); } };
 
       a.onended = safeFinish;
-      a.onerror = () => { speak(say); setTimeout(safeFinish, 600); };
-      a.play().catch(()=> { speak(say); setTimeout(safeFinish, 600); });
+      a.onerror = () => { currentAudio = null; speak(say); setTimeout(safeFinish, 600); };
+      a.play().catch(() => { currentAudio = null; speak(say); setTimeout(safeFinish, 600); });
 
-      // guarda-chuva se o evento não vier (autoplay bloqueado, etc.)
-      setTimeout(safeFinish, 3000);
+      // guarda-chuva caso eventos não disparem (autoplay bloqueado, etc.)
+      setTimeout(safeFinish, 3500);
     }catch{
-      speak(say); setTimeout(finish, 600);
+      speak(say);
+      setTimeout(finish, 600);
     }
   } else {
     try{
-      const u = new SpeechSynthesisUtterance(say);
+      const u = new SpeechSynthesisUtterance(say || ' ');
       u.lang = 'en-US'; u.rate = 0.95; u.pitch = 1.0;
-      u.onend = finish;
+      u.onend   = finish;
       u.onerror = () => setTimeout(finish, 300);
       speechSynthesis.cancel();
       speechSynthesis.speak(u);
-      // fallback se o onend não disparar
-      setTimeout(()=>{ if (isReading) finish(); }, 2500);
+      // fallback se onend não vier
+      setTimeout(() => { if (isReading) finish(); }, 2500);
     }catch{
       setTimeout(finish, 300);
     }
