--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -294,13 +294,6 @@
     border-bottom:3px solid #cfe0ff;
     margin:0 6px -2px;
   }
-.square-outline{
-  width:42px; height:42px;
-  border:6px solid var(--sq, #3b82f6); /* azul por padrão */
-  border-radius:10px;                  /* tire se quiser cantos retos */
-  background:transparent;
-  display:inline-block;
-}
 /* Quadrado padrão (já deve existir; só acrescente/ajuste transições) */
 .square-outline{
   width:42px; height:42px;
@@ -410,6 +403,7 @@ function stopAllAudio(){
 }
 
   let idx = 0;
+  let answered = false;   
   
   // ====== Elementos ======
   const subtitle = document.getElementById('subtitle');
@@ -924,7 +918,7 @@ function renderMatchQuestion(q){
   leftShuf.forEach(item => colL.appendChild(makeLeftBtn(item)));
   rightShuf.forEach(item => colR.appendChild(makeRightBtn(item)));
 }
-let isReading = false;
+
 function speakSelectedThenCheck(q, o, btn){
   if (answered || isReading) return;
   isReading = true;
