--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -332,6 +332,10 @@
   from{ transform:scale(.6); opacity:0 }
   to{   transform:scale(1);  opacity:1 }
 }
+/* para “desativado” */
+.icon-btn[disabled]{ opacity:.4; pointer-events:none; }
+/* para esconder completamente */
+.is-hidden{ display:none !important; }
 </style>
 </head>
 <body>
@@ -465,6 +469,11 @@ function stopAllAudio(){
     answered = false;
     btnNext.disabled = true;
     btnNext.classList.remove('ready');
+// garantir que os botões voltem quando for uma nova pergunta
+btnPlayPrompt.disabled = false;
+btnRepeat.disabled = false;
+btnPlayPrompt.classList.remove('is-hidden');
+btnRepeat.classList.remove('is-hidden');
 
     const q = questions[idx];
     if(!q){ finish(); return; }
@@ -647,16 +656,27 @@ thumb.onclick = (e) => {
 
   // ====== Fim ======
   function finish(){
-    bar.style.width = '100%';
-    promptEl.textContent = "🎉 Congratulations! You've completed all the questions!";
-    mediaBox.innerHTML = '<div style="font-size:44px">🏅</div>';
-    optionsEl.innerHTML = '';
-    btnNext.disabled = true;
-    btnNext.classList.remove('ready');
-    statusPill.textContent = `Concluído • ${questions.length}/${questions.length}`;
-    confetti(30);
-    speakFriendly(['Great! You finished!','Amazing work!']);
-  }
+  // para qualquer áudio/TTS que ainda esteja rodando
+  try { stopAllAudio(); } catch(e){}
+  try { speechSynthesis.cancel(); } catch(e){}
+  isReading = false;
+
+  bar.style.width = '100%';
+  promptEl.textContent = "🎉 Congratulations! You've completed all the questions!";
+  mediaBox.innerHTML = '<div style="font-size:44px">🏅</div>';
+  optionsEl.innerHTML = '';
+  btnNext.disabled = true;
+  btnNext.classList.remove('ready');
+  statusPill.textContent = `Concluído • ${questions.length}/${questions.length}`;
+  confetti(30);
+  speakFriendly(['Great! You finished!','Amazing work!']);
+
+  // >>> esconder e desativar os botões de áudio na tela final
+  btnPlayPrompt.disabled = true;
+  btnRepeat.disabled = true;
+  btnPlayPrompt.classList.add('is-hidden');
+  btnRepeat.classList.add('is-hidden');
+}
 
   // ====== Helpers ======
   function toast(msg){
