--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -616,6 +616,15 @@ thumb.onclick = (e) => {
       confetti(18);
       sCorrect.play().catch(()=>{});
       speakFriendly(['Yes! Great job!','Awesome!','You did it!']);
+try {
+  mediaBox.innerHTML = '';
+  const gif = new Image();
+  gif.src = './hannah_feliz.gif';
+  gif.alt = 'Hannah comemorando';
+  gif.setAttribute('draggable','false');   // evita arrastar a imagem
+  gif.style.pointerEvents = 'none';        // evita clique “pegar” foco
+  mediaBox.appendChild(gif);
+} catch(e){}
       liveEl.textContent = 'Resposta correta';
       answered = true;
       btnNext.disabled = false;
@@ -805,25 +814,39 @@ function renderOrderQuestion(q){
   }
 
   function checkBuilt(){
-    const sameLen = built.length === answerSeq.length;
-    if (!sameLen) return;
-    const ok = built.every((w,i)=> normalize(w) === normalize(answerSeq[i]));
-    if (ok){
-      confetti(18);
-      sCorrect.play().catch(()=>{});
-      speakFriendly(['Great!','Awesome!']);
-      liveEl.textContent = 'Ordem correta';
-      btnNext.disabled = false;
-      btnNext.classList.add('ready');
-      // Bloqueia toques adicionais
-      Array.from(optionsEl.querySelectorAll('.option')).forEach(el=>el.disabled=true);
-    }else{
-      sWrong.play().catch(()=>{});
-      speakFriendly(['Try again!']);
-      liveEl.textContent = 'Ordem incorreta, tente novamente';
-    }
+  const sameLen = built.length === answerSeq.length;
+  if (!sameLen) return;
+
+  const ok = built.every((w,i)=> normalize(w) === normalize(answerSeq[i]));
+  if (ok){
+    // troca o quadro grande por um GIF de comemoração
+    try {
+      mediaBox.innerHTML = '';
+      const gif = new Image();
+      gif.src = './hannah_feliz.gif';     // arquivo na MESMA pasta do index.html
+      gif.alt = 'Hannah comemorando';
+      gif.setAttribute('draggable','false');
+      gif.style.pointerEvents = 'none';
+      mediaBox.appendChild(gif);
+    } catch(e){}
+
+    confetti(18);
+    sCorrect.play().catch(()=>{});
+    speakFriendly(['Great!','Awesome!']);
+    liveEl.textContent = 'Ordem correta';
+    btnNext.disabled = false;
+    btnNext.classList.add('ready');
+    answered = true; // marca como respondido
+
+    // Bloqueia toques adicionais
+    Array.from(optionsEl.querySelectorAll('.option')).forEach(el=> el.disabled = true);
+  } else {
+    sWrong.play().catch(()=>{});
+    speakFriendly(['Try again!']);
+    liveEl.textContent = 'Ordem incorreta, tente novamente';
   }
 }
+
 function renderMatchQuestion(q){
   const sourcePairs = Array.isArray(q.pairs) ? q.pairs : [];
 
@@ -919,11 +942,31 @@ function renderMatchQuestion(q){
         selectedLeftVal = null;
 
         // terminou?
-        if (matched.size === sourcePairs.length){
-          liveEl.textContent = 'All pairs matched';
-          btnNext.disabled = false;
-          btnNext.classList.add('ready');
-        }
+if (matched.size === sourcePairs.length){
+  // troca o quadro grande por o GIF de comemoração
+  try {
+    mediaBox.innerHTML = '';
+    const gif = new Image();
+    gif.src = './hannah_feliz.gif';   // o arquivo deve estar na MESMA pasta do index.html
+    gif.alt = 'Hannah comemorando';
+    gif.setAttribute('draggable','false');
+    gif.style.pointerEvents = 'none';
+    mediaBox.appendChild(gif);
+  } catch(e){}
+
+  confetti(18);
+  sCorrect.play().catch(()=>{});
+  speakFriendly(['Great!','Awesome!']);
+  liveEl.textContent = 'All pairs matched';
+
+  // finaliza questão
+  answered = true;
+  btnNext.disabled = false;
+  btnNext.classList.add('ready');
+
+  // trava os botões restantes
+  Array.from(optionsEl.querySelectorAll('.option')).forEach(el => el.disabled = true);
+}
       } else {
         sWrong.play().catch(()=>{});
         speakFriendly(['Try again!']);
