--- a/Atividades/Perguntas Starter/index - Copy (2).html
+++ b/Atividades/Perguntas Starter/index - Copy (2).html
@@ -105,27 +105,25 @@
 
   /* === Media grande da pergunta (sem cortes) === */
   .q-media{
-  width:100%;
-  aspect-ratio:16/10;
-  background:#eef4ff;
-  border:1px dashed #cfe0ff;
-  border-radius:14px;
-  padding:8px;                 /* padding vai no container, não no <img> */
-  overflow:hidden;
-  display:block;               /* flex não é necessário aqui */
-}
-.q-media img{
-  width:100%;                  /* define ambas as dimensões */
-  height:100%;
-  object-fit:contain;          /* agora o contain funciona em todo browser */
-  display:block;
-  /* nada de padding no <img> */
-}
-
-/* Fallback para Safari antigo/Android antigo que não tem aspect-ratio */
-@supports not (aspect-ratio: 16/10){
-  .q-media{ height: 220px; }   /* ajuste este valor se quiser mais/menos alto */
-}
+    width:100%;
+    aspect-ratio:16/10;
+    background:#eef4ff;
+    border:1px dashed #cfe0ff;
+    border-radius:14px;
+    display:flex;
+    align-items:center;          /* centraliza vertical */
+    justify-content:center;      /* centraliza horizontal */
+    overflow:hidden;
+  }
+  .q-media img{
+    max-width:100%;
+    max-height:100%;
+    width:auto;
+    height:auto;
+    object-fit:contain;          /* não corta */
+    padding:8px;                 /* respiro */
+    display:block;
+  }
 
   .q-controls{display:flex; gap:8px; align-items:center; margin-top:8px}
 
